vm/nsf/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: spring-deployment
  namespace: nsf
spec:
  replicas: 3
  selector: 
    matchLabels: 
      app: spring-app
  template:
    metadata: 
      labels: 
        app: spring-app
    spec:
      containers:
        - name: spring-cont
          image: 69966/springgradleimg:1.1.1
          ports: 
            - containerPort: 8080
          volumeMounts:
            - name: spring-vol
              mountPath: /app/src/main/resources/images
      volumes:
        - name: spring-vol
          nfs: 
            server: 10.0.0.2
            path: /opt/nfs/data
